--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
-    "all-contributors-cli": "6.26.1",
+    "all-contributors-cli": "github:jdalrymple/all-contributors-cli#dist",
     "eslint": "^9.39.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "9.1.2",
