--- a/packages/requester-utils/package.json
+++ b/packages/requester-utils/package.json
@@ -47,7 +47,7 @@
     "lint:fix": "pnpm lint --fix"
   },
   "dependencies": {
-    "picomatch-browser": "^2.2.6",
+    "picomatch": "^4.0.3",
     "qs": "^6.14.0",
     "rate-limiter-flexible": "^8.2.1",
     "xcase": "^2.0.1"
