--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -53,7 +53,7 @@
   },
   "dependencies": {
     "@gitbeaker/requester-utils": "^43.8.0",
-    "qs": "^6.14.0",
+    "picoquery": "^2.5.0",
     "xcase": "^2.0.1"
   },
   "devDependencies": {
