--- a/packages/requester-utils/package.json
+++ b/packages/requester-utils/package.json
@@ -48,13 +48,12 @@
   },
   "dependencies": {
     "picomatch": "^4.0.3",
-    "qs": "^6.14.0",
+    "picoquery": "^2.5.0",
     "rate-limiter-flexible": "^8.2.1",
     "xcase": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
-    "@types/qs": "^6.14.0",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3"
   }
