security: Update latest security CVE's for lodash and udicii (#3824)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Justin Dalrymple",
   "pnpm": {
     "overrides": {
-      "tar": "^7.5.3"
+      "tar": "^7.5.3",
+      "lodash": ">4.17.22",
+      "undici": ">=6.23.0"
     }
   },
   "scripts": {
